Fixed scrollbar bug

--- a/rankify_project/static/css/main.css
+++ b/rankify_project/static/css/main.css
@@ -1,34 +1,20 @@
-
-* {
-overflow: scroll;  //Change this to scroll or auto
-margin: 0;
-padding: 0;
-
-}
-
-
-
 body {
   /*background-color: #191414;*/
   background-color: #000000;
+
+  overflow: scroll;  //Change this to scroll or auto
+  /* margin: 0;
+  padding: 0; */
 
 }
 a {
   color: #1DB954;
   text-decoration: none !important;
 }
-
 #WebGLCanvas {
     position: absolute;
     z-index: -1;
-
     top: 0px;
-
-
-
-
-
-
 }
 #content {
   text-align: center;
@@ -89,9 +75,6 @@ nav b:hover, .rounded-button:hover {
   margin: 0;
   transition: padding .2s, margin .2s;
 }
-
-
-
 .button-row {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -115,8 +98,6 @@ nav b:hover, .rounded-button:hover {
   padding: 30px;
   margin-top: 85px;
 }
-
-
 table {
     width: 90%;
     text-align: left;
@@ -124,7 +105,6 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
-
 th {
     height: 50px;
 }
